# schema.ts
@@ -242,6 +242,23 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
+    "/health": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        /** Health Check */
+        get: operations["health_check_health_get"];
+        put?: never;
+        post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
 }
 export type webhooks = Record<string, never>;
 export interface components {
@@ -270,7 +287,7 @@ export interface components {
             /** Last Message Text */
             last_message_text?: string | null;
             /** Updated At */
-            updated_at: string;
+            updated_at: number;
             /** Avatar Url */
             avatar_url?: string | null;
             participants: components["schemas"]["ChatParticipants"];
@@ -481,6 +498,19 @@ export interface components {
             /** Message */
             message: string;
             data?: components["schemas"]["UserMeResponse"] | null;
+        };
+        /** StandardResponse[dict] */
+        StandardResponse_dict_: {
+            /** Success */
+            success: boolean;
+            /** Status */
+            status: number;
+            /** Message */
+            message: string;
+            /** Data */
+            data?: {
+                [key: string]: unknown;
+            } | null;
         };
         /** Token */
         Token: {
@@ -1341,6 +1371,26 @@ export interface operations {
                 };
                 content: {
                     "application/json": components["schemas"]["StandardResponse_NoneType_"];
+                };
+            };
+        };
+    };
+    health_check_health_get: {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        requestBody?: never;
+        responses: {
+            /** @description Successful Response */
+            200: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content: {
+                    "application/json": components["schemas"]["StandardResponse_dict_"];
                 };
             };
         };
